2005-04-03  Keltus <keltus@users.sourceforge.net>
	* irclib.py (protocol_events): Added "pong" and "invite" events.
	Patch from Adam Mikuta.
	* irclib.py (ServerConnection.part): Added message parameter.
	Patch from Adam Mikuta.

2005-02-23  Keltus <keltus@users.sourceforge.net>
	* Released version 0.4.4.

	* irclib.py (VERSION):
	* python-irclib.spec.in:
	Preparations for version 0.4.4.

2005-01-28  Keltus <keltus@users.sourceforge.net>
	* irclib.py: Moved self.irclibobj._remove_connection call from
	close() to disconnect(). Patch from Alexey Nezhdanov.

2005-01-25  Keltus <keltus@users.sourceforge.net>
	* irclib.py (ServerConnection.connect): closes socket if a
	connection does not occur
	* irclib.py (ServerConnection.connect): "Changing server" ->
	"Changing servers" (more ubiquitous quit phrase)

2005-01-23  Keltus <keltus@users.sourceforge.net>

	* irclib.py: Removed depreciated apply functions. python-irclib is
	now compatible with Python 1.6 and above.
	* testbot.py: Removed redundant extra start() call

2005-01-20  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.3.
	* Makefile: Removed more GNU make specific constructs.

2005-01-19  Joel Rosdahl  <joel@rosdahl.net>

	* Makefile: Don't require GNU make.

2005-01-19  Keltus  <keltus@users.sourceforge.net>

	* ircbot.py (IRCDict.__iter__): Added __iter__ method for IRCDict.

2005-01-17  Joel Rosdahl  <joel@rosdahl.net>

	* ircbot.py (IRCDict.__contains__): Added __contains__method for
	IRCDict. Patch from Keltus.
	(SingleServerIRCBot.on_ctcp): Corrected default decoding of CTCP
	DCC CHAT. Patch from Keltus.

	* irclib.py (VERSION):
	* python-irclib.spec.in:
	Preparations for version 0.4.3.

	* debian: Removed Debian package directory since python-irclib is
	in Debian now.

	* ircbot.py (SingleServerIRCBot._on_namreply): Improved comment
	about arguments to the function. Patch from Keltus.
	(Channel.has_allow_external_messages): Renamed from
	has_message_from_outside_protection. Patch from Keltus.
